--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,16 @@
 body {
-    background-color: lightcyan;
+    background-color: rgb(73, 183, 226);
 }
 
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    text-align: center;
 }
-body > button, input, div {
+body > button, input, div, p {
     margin: 10px 0; 
 }
-#scoreCont p {
-    margin-bottom: 10px;
+.welcome, .account-1, .account-2 {
+    background-color: #2c2c2c;
+    color: white;
 }
